<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding"
        android:gravity="center"
        android:background="@drawable/degrade_background"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5"
            >

            <ImageView
            android:id="@+id/ivLoginName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_login_ic_title_height"
            android:src="@drawable/logo"
            android:layout_marginBottom="@dimen/activity_login_ic_title_margin_bottom"
            />

            <TextView
                android:id="@+id/tvLoginSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_login_subtitle_text_size"
                android:textColorHint="@color/colorWhite"
                android:text="@string/activity_login_subtitle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1.2">

            <LinearLayout
                android:layout_width="@dimen/activity_login_username_password_zone_width"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_white"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_login_username_password_zone_text_margin_top_bottom"
                >

                <ImageView
                    android:layout_width="@dimen/activity_login_username_password_ic_size"
                    android:layout_height="@dimen/activity_login_username_password_ic_size"
                    android:padding="@dimen/activity_login_username_password_ic_padding"
                    android:src="@drawable/ic_user"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/activity_login_username_password_zone_text_size"
                    android:hint="@string/login_hint_username"
                    android:textColorHint="@color/colorDarkGrey"
                    android:textColor="@color/colorGrey"
                    android:layout_gravity="start|center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/activity_login_username_password_zone_width"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_white"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_login_username_password_zone_text_margin_top_bottom"
                >

                <ImageView
                    android:layout_width="@dimen/activity_login_username_password_ic_size"
                    android:layout_height="@dimen/activity_login_username_password_ic_size"
                    android:padding="@dimen/activity_login_username_password_ic_padding"
                    android:src="@drawable/ic_lock"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/activity_login_username_password_zone_text_size"
                    android:hint="@string/login_hint_password"
                    android:textColorHint="@color/colorDarkGrey"
                    android:textColor="@color/colorGrey"
                    android:inputType="textPassword"
                    android:layout_gravity="start|center"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvMessageError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_login_submessage_text_size"
                android:textStyle="bold"
                android:textColor="@color/colorRed"
                android:text="@string/login_message_error"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            >

            <Button
                android:id="@+id/btnLoginAction"
                android:layout_width="@dimen/activity_login_username_password_zone_width"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rect_border_darkred"
                android:textSize="@dimen/activity_login_submessage_text_size"
                android:padding="@dimen/activity_login_bt_connect_padding"
                android:textColor="@color/colorWhite"
                android:text="@string/login_button"
                />

            <LinearLayout
                android:id="@+id/layoutConnectionInProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_login_submessage_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/login_message_in_progress"/>

                <ProgressBar
                    android:id="@+id/pcLoginAuth"
                    android:layout_margin="@dimen/activity_login_progress_bar_margin"
                    android:layout_width="@dimen/activity_login_progress_bar_size"
                    android:layout_height="@dimen/activity_login_progress_bar_size" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>